--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User Id=hazem;Password=azerty;Data Source=localhost:1521/ORCLPDB1"
+    "DefaultConnection": "User Id=;Password=;Data Source=localhost:1521/ORCLPDB1"
   }
 }
